--- a/app/Resources/views/security/register.html.twig
+++ b/app/Resources/views/security/register.html.twig
@@ -1,15 +1,44 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="container">
+        {% if error %}{{ error.message }}{% endif %}
+        <form class="form-horizontal" method="post">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" name="_username" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" name="_password" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Prenom</label>
+                <div class="col-sm-10">
+                    <input type="password" name="_prenom" class="form-control" id="inputPassword3" placeholder="prenom">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">nom</label>
+                <div class="col-sm-10">
+                    <input type="password" name="_nom" class="form-control" id="inputPassword3" placeholder="nom">
+                </div>
+            </div>
 
-{{ form_start(form) }}
-    {{ form_row(form.prenom) }}
-    {{ form_row(form.nom) }}
-    {{ form_row(form.email) }}
-    {{ form_row(form.password.first) }}
-    {{ form_row(form.password.second) }}
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">S'enregistrer</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
 <button type="submit">Register</button>
-{{ form_end(form) }}
+
 {% endblock %}
 {% block stylesheets %}
 
