--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container margin">
         {% if error %}{{ error.message }}{% endif %}
     <form class="form-horizontal" method="post">
         <div class="form-group">
