--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,7 +11,7 @@
         {% for flash_message in app.session.flashBag.get('success') %}
             <div class="alert alert-dismissible alert-success">
                 <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ flash_message }}
+                {{ flash_message|raw }}
             </div>
         {% endfor %}
     </div>
