--- a/app/Resources/views/security/register.html.twig
+++ b/app/Resources/views/security/register.html.twig
@@ -2,14 +2,14 @@
 
 {% block body %}
 <div class="container margin">
-
+    {% form_theme form 'form/form_div_layout.html.twig' %}
 {{ form_start(form) }}
     {{ form_row(form.prenom) }}
     {{ form_row(form.nom) }}
     {{ form_row(form.email) }}
     {{ form_row(form.password.first) }}
     {{ form_row(form.password.second) }}
-<button type="submit">Register</button>
+<button class="btn btn-primary" type="submit">Submit</button>
 {{ form_end(form) }}
 </div>
 {% endblock %}
